--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@heroicons/react": "^2.1.1",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "spotify-web-api-js": "^1.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
