--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "next": "14.1.0",
     "react": "^18",
+    "react-cookie": "^7.1.0",
     "react-dom": "^18",
     "spotify-web-api-js": "^1.5.2"
   },
