--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-cookie": "^7.1.0",
     "react-dom": "^18",
+    "react-router-dom": "^6.22.1",
     "spotify-web-api-js": "^1.5.2"
   },
   "devDependencies": {
