--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
-    "ai": "^3.0.7",
+    "@huggingface/inference": "^2.6.4",
+    "@types/react-speech-recognition": "^3.9.5",
+    "ai": "^3.0.8",
+    "express": "^4.18.3",
+    "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "next": "14.1.0",
     "openai": "^4.28.4",
@@ -19,7 +23,9 @@
     "react-cookie": "^7.1.0",
     "react-dom": "^18",
     "react-router-dom": "^6.22.1",
+    "react-speech-recognition": "^3.10.0",
     "react-spotify-web-playback-sdk": "^3.0.2",
+    "replicate": "^0.27.1",
     "spotify-web-api-js": "^1.5.2",
     "zod": "^3.22.4"
   },
