--- a/package.json
+++ b/package.json
@@ -4,21 +4,28 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@huggingface/inference": "^2.6.4",
+    "@prisma/client": "^5.11.0",
     "@types/react-speech-recognition": "^3.9.5",
+    "@vercel/postgres": "^0.7.2",
     "ai": "^3.0.8",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
-    "next": "14.1.0",
+    "next": "^14.1.3",
     "openai": "^4.28.4",
+    "prisma": "^5.11.0",
     "react": "^18",
     "react-cookie": "^7.1.0",
     "react-dom": "^18",
@@ -38,6 +45,7 @@
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "ts-node": "^10.9.2",
     "typescript": "5.3.3"
   }
 }
