Added spotify webplayer to mood selection page

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.1.1",
     "@huggingface/inference": "^2.6.4",
     "@prisma/client": "^5.11.0",
+    "@types/react-helmet": "^6.1.11",
     "@types/react-speech-recognition": "^3.9.5",
     "@vercel/postgres": "^0.7.2",
     "ai": "^3.0.8",
@@ -29,12 +30,15 @@
     "react": "^18",
     "react-cookie": "^7.1.0",
     "react-dom": "^18",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.22.1",
     "react-speech-recognition": "^3.10.0",
+    "react-spotify-web-playback": "^0.14.3",
     "react-spotify-web-playback-sdk": "^3.0.2",
     "react-toastify": "^10.0.5",
     "replicate": "^0.27.1",
     "spotify-web-api-js": "^1.5.2",
+    "spotify-web-api-node": "^5.0.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
