--- a/package.json
+++ b/package.json
@@ -6,27 +6,36 @@
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.9",
+    "@auth0/auth0-react": "^2.2.4",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@huggingface/inference": "^2.6.4",
-    "@prisma/client": "^5.11.0",
+    "@magic-sdk/admin": "^1.8.0",
+    "@prisma/client": "^5.14.0",
+    "@stytch/nextjs": "^19.0.0",
+    "@stytch/stytch-react": "^4.1.2",
     "@types/react-helmet": "^6.1.11",
     "@types/react-speech-recognition": "^3.9.5",
     "@vercel/postgres": "^0.7.2",
-    "ai": "^3.0.8",
+    "ably": "^2.0.4",
+    "ai": "^3.1.1",
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
+    "magic-sdk": "^13.6.2",
     "next": "^14.1.3",
-    "openai": "^4.28.4",
-    "prisma": "^5.11.0",
+    "openai": "^4.42.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-cookie": "^7.1.0",
     "react-dom": "^18",
@@ -39,16 +48,21 @@
     "replicate": "^0.27.1",
     "spotify-web-api-js": "^1.5.2",
     "spotify-web-api-node": "^5.0.2",
+    "uuid": "^9.0.1",
+    "web3": "^4.8.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.17",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "prisma": "^5.14.0",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
     "typescript": "5.3.3"
