--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@prisma/client": "^5.14.0",
     "@stytch/nextjs": "^19.0.0",
     "@stytch/stytch-react": "^4.1.2",
+    "@types/dom-speech-recognition": "^0.0.4",
     "@types/react-helmet": "^6.1.11",
     "@types/react-speech-recognition": "^3.9.5",
     "@vercel/postgres": "^0.7.2",
@@ -34,7 +35,7 @@
     "js-cookie": "^3.0.5",
     "magic-sdk": "^13.6.2",
     "next": "^14.1.3",
-    "openai": "^4.42.0",
+    "openai": "^4.52.3",
     "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-cookie": "^7.1.0",
@@ -53,6 +54,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20",
     "@types/react": "^18",
